tests/baselines/reference/restElementWithNullInitializer.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts(1,15): error TS2544: Type 'null' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts(4,15): error TS2544: Type 'undefined' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts(7,15): error TS2544: Type '{}' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.ts (3 errors) ====
    function foo1([...r] = null) {
                  ~~~~~~
!!! error TS2544: Type 'null' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
    }
    
    function foo2([...r] = undefined) {
                  ~~~~~~
!!! error TS2544: Type 'undefined' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
    }
    
    function foo3([...r] = {}) {
                  ~~~~~~
!!! error TS2544: Type '{}' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
    }
    
    function foo4([...r] = []) {
    }
    